# cafe-crawl

backend/: Cargo.toml  Makefile
backend/src/: main.rs
frontend/: Makefile  package.json
frontend/public/: index.html
frontend/src/: About.css  About.tsx  Admin.css  Admin.tsx  App.css  App.tsx  Head.tsx  Header.css  Header.tsx  StateContext.tsx  StateProvider.css  StateProvider.tsx  Stops.css  Stops.tsx  api.tsx  index.css  stops.ts  stops.tsx
frontend/src/Mapbox/: Center.tsx  Image.tsx  Map.css  Map.tsx  MapContext.tsx  TileLayer.tsx
