[package]
name = "backend"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
hmac = "0.11.0"
jwt = "0.15.0"
lambda_runtime = "0.4.1"
log = "0.4.14"
rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_dynamodb = { version = "0.47.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.9.8"
simple_logger = "1.13.0"
thiserror = "1.0.30"
tokio = "1.12.0"
